--- a/src/news-2.html
+++ b/src/news-2.html
@@ -85,13 +85,64 @@
                     </ul>
                   </div>
                   <div class="col-lg-6">
-                    <div class="position-relative">
+                    <div class="swiper mySwiper2 no-margin">
+                      <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                          <img
+                            src="https://swiperjs.com/demos/images/nature-1.jpg"
+                          />
+                        </div>
+                        <div class="swiper-slide">
+                          <img
+                            src="https://swiperjs.com/demos/images/nature-2.jpg"
+                          />
+                        </div>
+                        <div class="swiper-slide">
+                          <img
+                            src="https://swiperjs.com/demos/images/nature-3.jpg"
+                          />
+                        </div>
+                        <div class="swiper-slide">
+                          <img
+                            src="https://swiperjs.com/demos/images/nature-4.jpg"
+                          />
+                        </div>
+                        <div class="swiper-slide">
+                          <img
+                            src="https://swiperjs.com/demos/images/nature-5.jpg"
+                          />
+                        </div>
+                        <div class="swiper-slide">
+                          <img
+                            src="https://swiperjs.com/demos/images/nature-6.jpg"
+                          />
+                        </div>
+                        <div class="swiper-slide">
+                          <img
+                            src="https://swiperjs.com/demos/images/nature-7.jpg"
+                          />
+                        </div>
+                        <div class="swiper-slide">
+                          <img
+                            src="https://swiperjs.com/demos/images/nature-8.jpg"
+                          />
+                        </div>
+                        <div class="swiper-slide">
+                          <img
+                            src="https://swiperjs.com/demos/images/nature-9.jpg"
+                          />
+                        </div>
+                        <div class="swiper-slide">
+                          <img
+                            src="https://swiperjs.com/demos/images/nature-10.jpg"
+                          />
+                        </div>
+                      </div>
+                    </div>
+                    <div class="position-relative mx-5">
                       <div
-                        style="
-                          --swiper-navigation-color: #fff;
-                          --swiper-pagination-color: #fff;
-                        "
-                        class="swiper mySwiper2 no-margin"
+                        thumbsSlider=""
+                        class="swiper mySwiper no-margin mt-3"
                       >
                         <div class="swiper-wrapper">
                           <div class="swiper-slide">
@@ -146,71 +197,11 @@
                           </div>
                         </div>
                       </div>
-                      <div
-                        class="button-next button-next-thumbs"
-                        id="button-next"
-                      >
+                      <div class="button-next" id="button-next">
                         <img src="img/arrow-next.png" alt="новость" />
                       </div>
-                      <div
-                        class="button-prev button-prev-thumbs"
-                        id="button-prev"
-                      >
+                      <div class="button-prev" id="button-prev">
                         <img src="img/arrow-prev.png" alt="новость" />
-                      </div>
-                    </div>
-                    <div thumbsSlider="" class="swiper mySwiper no-margin mt-3">
-                      <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                          <img
-                            src="https://swiperjs.com/demos/images/nature-1.jpg"
-                          />
-                        </div>
-                        <div class="swiper-slide">
-                          <img
-                            src="https://swiperjs.com/demos/images/nature-2.jpg"
-                          />
-                        </div>
-                        <div class="swiper-slide">
-                          <img
-                            src="https://swiperjs.com/demos/images/nature-3.jpg"
-                          />
-                        </div>
-                        <div class="swiper-slide">
-                          <img
-                            src="https://swiperjs.com/demos/images/nature-4.jpg"
-                          />
-                        </div>
-                        <div class="swiper-slide">
-                          <img
-                            src="https://swiperjs.com/demos/images/nature-5.jpg"
-                          />
-                        </div>
-                        <div class="swiper-slide">
-                          <img
-                            src="https://swiperjs.com/demos/images/nature-6.jpg"
-                          />
-                        </div>
-                        <div class="swiper-slide">
-                          <img
-                            src="https://swiperjs.com/demos/images/nature-7.jpg"
-                          />
-                        </div>
-                        <div class="swiper-slide">
-                          <img
-                            src="https://swiperjs.com/demos/images/nature-8.jpg"
-                          />
-                        </div>
-                        <div class="swiper-slide">
-                          <img
-                            src="https://swiperjs.com/demos/images/nature-9.jpg"
-                          />
-                        </div>
-                        <div class="swiper-slide">
-                          <img
-                            src="https://swiperjs.com/demos/images/nature-10.jpg"
-                          />
-                        </div>
                       </div>
                     </div>
                   </div>
@@ -693,8 +684,8 @@
         autoplay: true,
 
         navigation: {
-          nextEl: ".button-next",
-          prevEl: ".button-prev",
+          nextEl: "#button-next-2",
+          prevEl: "#button-prev-2",
         },
 
         breakpoints: {
@@ -714,8 +705,8 @@
         autoplay: true,
 
         navigation: {
-          nextEl: ".button-next",
-          prevEl: ".button-prev",
+          nextEl: "#button-next-3",
+          prevEl: "#button-prev-3",
         },
 
         breakpoints: {
