--- a/src/sertificaty.html
+++ b/src/sertificaty.html
@@ -60,78 +60,80 @@
           <h2 class="section__title wow animate__fadeIn" data-wow-duration="1s">
             Производство и продукция сертифицированы
           </h2>
-          <div class="swiper section__slider section__slider--sertificaty">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <a
-                  data-fancybox="gallery"
-                  data-src="img/sertificaty/cert-1.png"
-                >
-                  <img src="img/sertificaty/cert-1.png" alt="сертификат" />
-                </a>
-              </div>
-              <div class="swiper-slide">
-                <a
-                  data-fancybox="gallery"
-                  data-src="img/sertificaty/cert-2.png"
-                >
-                  <img src="img/sertificaty/cert-2.png" alt="сертификат" />
-                </a>
-              </div>
-              <div class="swiper-slide">
-                <a
-                  data-fancybox="gallery"
-                  data-src="img/sertificaty/cert-3.png"
-                >
-                  <img src="img/sertificaty/cert-3.png" alt="сертификат" />
-                </a>
-              </div>
-              <div class="swiper-slide">
-                <a
-                  data-fancybox="gallery"
-                  data-src="img/sertificaty/cert-6.png"
-                >
-                  <img src="img/sertificaty/cert-6.png" alt="сертификат" />
-                </a>
-              </div>
-              <div class="swiper-slide">
-                <a
-                  data-fancybox="gallery"
-                  data-src="img/sertificaty/cert-7.png"
-                >
-                  <img src="img/sertificaty/cert-7.png" alt="сертификат" />
-                </a>
-              </div>
-              <div class="swiper-slide">
-                <a
-                  data-fancybox="gallery"
-                  data-src="img/sertificaty/cert-8.png"
-                >
-                  <img src="img/sertificaty/cert-8.png" alt="сертификат" />
-                </a>
-              </div>
-              <div class="swiper-slide">
-                <a
-                  data-fancybox="gallery"
-                  data-src="img/sertificaty/cert-9.png"
-                >
-                  <img src="img/sertificaty/cert-9.png" alt="сертификат" />
-                </a>
-              </div>
-              <div class="swiper-slide">
-                <a
-                  data-fancybox="gallery"
-                  data-src="img/sertificaty/cert-10.png"
-                >
-                  <img src="img/sertificaty/cert-10.png" alt="сертификат" />
-                </a>
+          <div class="position-relative">
+            <div class="swiper section__slider section__slider--sertificaty">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <a
+                    data-fancybox="gallery"
+                    data-src="img/sertificaty/cert-1.png"
+                  >
+                    <img src="img/sertificaty/cert-1.png" alt="" />
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a
+                    data-fancybox="gallery"
+                    data-src="img/sertificaty/cert-2.png"
+                  >
+                    <img src="img/sertificaty/cert-2.png" alt="" />
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a
+                    data-fancybox="gallery"
+                    data-src="img/sertificaty/cert-3.png"
+                  >
+                    <img src="img/sertificaty/cert-3.png" alt="" />
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a
+                    data-fancybox="gallery"
+                    data-src="img/sertificaty/cert-6.png"
+                  >
+                    <img src="img/sertificaty/cert-6.png" alt="" />
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a
+                    data-fancybox="gallery"
+                    data-src="img/sertificaty/cert-7.png"
+                  >
+                    <img src="img/sertificaty/cert-7.png" alt="" />
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a
+                    data-fancybox="gallery"
+                    data-src="img/sertificaty/cert-8.png"
+                  >
+                    <img src="img/sertificaty/cert-8.png" alt="" />
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a
+                    data-fancybox="gallery"
+                    data-src="img/sertificaty/cert-9.png"
+                  >
+                    <img src="img/sertificaty/cert-9.png" alt="" />
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a
+                    data-fancybox="gallery"
+                    data-src="img/sertificaty/cert-10.png"
+                  >
+                    <img src="img/sertificaty/cert-10.png" alt="" />
+                  </a>
+                </div>
               </div>
             </div>
-            <div class="button-next">
-              <img src="img/arrow-next.png" alt="сертификат" />
+            <div class="button-next" id="button-next-2">
+              <img src="img/arrow-next.png" alt="" />
             </div>
-            <div class="button-prev">
-              <img src="img/arrow-prev.png" alt="сертификат" />
+            <div class="button-prev" id="button-prev-2">
+              <img src="img/arrow-prev.png" alt="" />
             </div>
           </div>
         </div>
@@ -142,78 +144,80 @@
           <h2 class="section__title wow animate__fadeIn" data-wow-duration="1s">
             Дипломы завода винтовых свай
           </h2>
-          <div class="swiper section__slider section__slider--sertificaty">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <a
-                  data-fancybox="gallery"
-                  data-src="img/sertificaty/cert-1.png"
-                >
-                  <img src="img/sertificaty/cert-1.png" alt="сертификат" />
-                </a>
-              </div>
-              <div class="swiper-slide">
-                <a
-                  data-fancybox="gallery"
-                  data-src="img/sertificaty/cert-2.png"
-                >
-                  <img src="img/sertificaty/cert-2.png" alt="сертификат" />
-                </a>
-              </div>
-              <div class="swiper-slide">
-                <a
-                  data-fancybox="gallery"
-                  data-src="img/sertificaty/cert-3.png"
-                >
-                  <img src="img/sertificaty/cert-3.png" alt="сертификат" />
-                </a>
-              </div>
-              <div class="swiper-slide">
-                <a
-                  data-fancybox="gallery"
-                  data-src="img/sertificaty/cert-6.png"
-                >
-                  <img src="img/sertificaty/cert-6.png" alt="сертификат" />
-                </a>
-              </div>
-              <div class="swiper-slide">
-                <a
-                  data-fancybox="gallery"
-                  data-src="img/sertificaty/cert-7.png"
-                >
-                  <img src="img/sertificaty/cert-7.png" alt="сертификат" />
-                </a>
-              </div>
-              <div class="swiper-slide">
-                <a
-                  data-fancybox="gallery"
-                  data-src="img/sertificaty/cert-8.png"
-                >
-                  <img src="img/sertificaty/cert-8.png" alt="сертификат" />
-                </a>
-              </div>
-              <div class="swiper-slide">
-                <a
-                  data-fancybox="gallery"
-                  data-src="img/sertificaty/cert-9.png"
-                >
-                  <img src="img/sertificaty/cert-9.png" alt="сертификат" />
-                </a>
-              </div>
-              <div class="swiper-slide">
-                <a
-                  data-fancybox="gallery"
-                  data-src="img/sertificaty/cert-10.png"
-                >
-                  <img src="img/sertificaty/cert-10.png" alt="сертификат" />
-                </a>
+          <div class="position-relative">
+            <div class="swiper section__slider section__slider--sertificaty-2">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <a
+                    data-fancybox="gallery"
+                    data-src="img/sertificaty/cert-1.png"
+                  >
+                    <img src="img/sertificaty/cert-1.png" alt="" />
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a
+                    data-fancybox="gallery"
+                    data-src="img/sertificaty/cert-2.png"
+                  >
+                    <img src="img/sertificaty/cert-2.png" alt="" />
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a
+                    data-fancybox="gallery"
+                    data-src="img/sertificaty/cert-3.png"
+                  >
+                    <img src="img/sertificaty/cert-3.png" alt="" />
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a
+                    data-fancybox="gallery"
+                    data-src="img/sertificaty/cert-6.png"
+                  >
+                    <img src="img/sertificaty/cert-6.png" alt="" />
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a
+                    data-fancybox="gallery"
+                    data-src="img/sertificaty/cert-7.png"
+                  >
+                    <img src="img/sertificaty/cert-7.png" alt="" />
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a
+                    data-fancybox="gallery"
+                    data-src="img/sertificaty/cert-8.png"
+                  >
+                    <img src="img/sertificaty/cert-8.png" alt="" />
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a
+                    data-fancybox="gallery"
+                    data-src="img/sertificaty/cert-9.png"
+                  >
+                    <img src="img/sertificaty/cert-9.png" alt="" />
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a
+                    data-fancybox="gallery"
+                    data-src="img/sertificaty/cert-10.png"
+                  >
+                    <img src="img/sertificaty/cert-10.png" alt="" />
+                  </a>
+                </div>
               </div>
             </div>
-            <div class="button-next">
-              <img src="img/arrow-next.png" alt="сертификат" />
+            <div class="button-next" id="button-next-3">
+              <img src="img/arrow-next.png" alt="" />
             </div>
-            <div class="button-prev">
-              <img src="img/arrow-prev.png" alt="сертификат" />
+            <div class="button-prev" id="button-prev-3">
+              <img src="img/arrow-prev.png" alt="" />
             </div>
           </div>
         </div>
@@ -224,26 +228,28 @@
           <h2 class="section__title wow animate__fadeIn" data-wow-duration="1s">
             Нам доверяют свои объекты:
           </h2>
-          <div class="swiper section__slider section__slider--partners">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <img src="img/partners/logo-rosseti.png" alt="сертификат" />
-              </div>
-              <div class="swiper-slide">
-                <img src="img/partners/Логотип_ГК_ФСК.png" alt="сертификат" />
-              </div>
-              <div class="swiper-slide">
-                <img src="img/partners/Росатом.svg.png" alt="сертификат" />
-              </div>
-              <div class="swiper-slide">
-                <img src="img/partners/Росатом.svg.png" alt="сертификат" />
+          <div class="position-relative">
+            <div class="swiper section__slider section__slider--partners">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img src="img/partners/logo-rosseti.png" alt="" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="img/partners/Логотип_ГК_ФСК.png" alt="" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="img/partners/Росатом.svg.png" alt="" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="img/partners/Росатом.svg.png" alt="" />
+                </div>
               </div>
             </div>
-            <div class="button-next">
-              <img src="img/arrow-next.png" alt="сертификат" />
+            <div class="button-next" id="button-next">
+              <img src="img/arrow-next.png" alt="" />
             </div>
-            <div class="button-prev">
-              <img src="img/arrow-prev.png" alt="сертификат" />
+            <div class="button-prev" id="button-prev">
+              <img src="img/arrow-prev.png" alt="" />
             </div>
           </div>
         </div>
@@ -543,8 +549,8 @@
         autoplay: true,
 
         navigation: {
-          nextEl: ".button-next",
-          prevEl: ".button-prev",
+          nextEl: "#button-next",
+          prevEl: "#button-prev",
         },
 
         breakpoints: {
@@ -557,23 +563,6 @@
           },
         },
       });
-      var swiper = new Swiper(".section__slider--gallery", {
-        slidesPerView: 2,
-        spaceBetween: 0,
-        loop: true,
-        autoplay: true,
-
-        navigation: {
-          nextEl: ".button-next",
-          prevEl: ".button-prev",
-        },
-
-        breakpoints: {
-          992: {
-            slidesPerView: 4,
-          },
-        },
-      });
       var swiper = new Swiper(".section__slider--sertificaty", {
         slidesPerView: 2,
         spaceBetween: 20,
@@ -581,8 +570,8 @@
         autoplay: true,
 
         navigation: {
-          nextEl: ".button-next",
-          prevEl: ".button-prev",
+          nextEl: "#button-next-2",
+          prevEl: "#button-prev-2",
         },
 
         breakpoints: {
@@ -594,14 +583,24 @@
           },
         },
       });
-      var swiper = new Swiper(".section__slider--rewievs", {
-        slidesPerView: 1,
+      var swiper = new Swiper(".section__slider--sertificaty-2", {
+        slidesPerView: 2,
+        spaceBetween: 20,
         loop: true,
         autoplay: true,
 
         navigation: {
-          nextEl: ".button-next",
-          prevEl: ".button-prev",
+          nextEl: "#button-next-3",
+          prevEl: "#button-prev-3",
+        },
+
+        breakpoints: {
+          768: {
+            spaceBetween: 100,
+          },
+          992: {
+            slidesPerView: 6,
+          },
         },
       });
     </script>
